# CimpleMath

./: CMakeLists.txt  README.md  formatted_expression.h  main.c  mat2.h  mat3.h  mat4.h  operations.h  vec.h
examples/: example_generics.c  example_no_generics.c
include/CimpleMath/: all.h  general.h  mat2.h  mat3.h  mat4.h  operations.h  vec.h
